--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap');
 * {
   margin: 0;
+  font-family: "Roboto Mono";
 }
 /* body {
   background-image: linear-gradient(
